# scaldex

./: .flake8  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  LOCAL_TEST.md  NOTICE  PUBLIC_UX_PLAN.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml  run_scaldex.py  run_tokenmessung.py
docs/: BUILT-IN-TASKS.md  CODEX-INSTRUCTION-WORKFLOW.md  MEASUREMENT-MODEL.md  built-in-tasks.md  measurement-model.md
src/scaldex/: __init__.py  analyzer.py  app.py  cli.py  fixture.py  multisummary.py  result_console.py  runner.py  schemas.py
src/tokenmessung/: __init__.py  analyzer.py  cli.py  fixture.py  multisummary.py  result_console.py  runner.py
tests/: test_analyzer.py  test_cli.py  test_fixture.py  test_multisummary.py  test_root_runner.py  test_runner.py
