[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "scaldex"
version = "1.0.0"
description = "Measurement harness for Codex instruction packages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
license = "MIT"

[project.scripts]
scaldex = "scaldex.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
