[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "scaldex"
version = "1.0.1"
description = "Measurement harness for Codex instruction packages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
license = "AGPL-3.0-only"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
scaldex = "scaldex.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
